gcc/testsuite/rust.test/fail_compilation/break1.rs
fn main() {
    let a;
    a = 1;
    break a;
}
